@@ -11,6 +11,8 @@ Version 6.2.2 - not yet released
   - fixed several minor bugs in the plane database dialog
   - fix MacCready steps for knots and ft/min
   - manual and translation updates
+* data files
+  - fixed bugs in TNP airspace file parsing
 * Android
   - acquire "Vibrate" permission
 
